--- a/mrshop-internet-portal/search.html
+++ b/mrshop-internet-portal/search.html
@@ -54,12 +54,12 @@
         .top-pagination span {
             margin-right: 10px;
         }
-/*        .logo-list li{
+       .logo-list li{
             padding:8px;
         }
        .logo-list li:hover{
             background-color: #f3f3f3;
-        }*/
+        }
         .type-list a:hover{
             color: #1299ec;
         }
@@ -105,13 +105,10 @@
             </ul>
             <!--已选择过滤项-->
             <ul class="tags-choose">
-                <li class="tag">
-                    品牌:<span style="color: red">apple</span>
-                    <i class="sui-icon icon-tb-close"></i>
-                </li>
-                <li class="tag">
-                    内存:<span style="color: red">4G</span>
-                    <i class="sui-icon icon-tb-close"></i>
+                <li class="tag" v-for="(value,key,index) in filter">
+                    {{ key == 'brandId'?'品牌' :key == 'cid3'?'分类':key}}:
+                    <span style="color: red">{{getFilterValue(key,value)}}</span>
+                    <i @click="removeFilterItem(key)" class="sui-icon icon-tb-close"></i>
                 </li>
             </ul>
             <div class="clearfix"></div>
@@ -122,7 +119,9 @@
                 <div class="fl key">分类</div>
                 <div class="fl value">
                     <ul class="type-list">
-                        <li v-for="(cate,index) in categoryList" :key="index">
+                        <li v-for="(cate,index) in filters.categoryList" 
+                        @click="addFilter('cid3',cate.id)"
+                        :key="index">
                             <a>{{cate.name}}</a>
                         </li>
                     </ul>
@@ -132,124 +131,35 @@
             <div class="type-wrap logo">
                 <div class="fl key brand">品牌</div>
                 <div class="value logos">
-                    <ul class="logo-list" v-for="(brand,index) in brandList" :key="index"
+                    <ul class="logo-list" v-for="(brand,index) in filters.brandList" :key="index"
                     v-if="brand.image"
                     >
                         <li><img :src="brand.image" /></li>
-                        <li style="text-align: center" v-else><a style="line-height: 30px; font-size: 12px" href="#">xx</a></li>
+                        <li style="text-align: center" v-else>
+                            <a style="line-height: 30px; font-size: 12px" href="#">{{brand.name}}</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="fl ext">
                     <a href="javascript:void(0);" class="sui-btn">多选</a>
                 </div>
             </div>
-            <div class="type-wrap">
-                <div class="fl key">网络制式</div>
+            <div class="type-wrap" v-for="(value,key,index) in filters.specMap" v-show="index < 5 || showMore">
+                <div class="fl key">{{key}}</div>
                 <div class="fl value">
                     <ul class="type-list">
-                        <li>
-                            <a>GSM（移动/联通2G）</a>
-                        </li>
-                        <li>
-                            <a>电信2G</a>
-                        </li>
-                        <li>
-                            <a>电信3G</a>
-                        </li>
-                        <li>
-                            <a>移动3G</a>
-                        </li>
-                        <li>
-                            <a>联通3G</a>
-                        </li>
-                        <li>
-                            <a>联通4G</a>
-                        </li>
-                        <li>
-                            <a>电信3G</a>
-                        </li>
-                        <li>
-                            <a>移动3G</a>
-                        </li>
-                        <li>
-                            <a>联通3G</a>
-                        </li>
-                        <li>
-                            <a>联通4G</a>
+                        <li @click="addFilter(key,item)" v-for="(item,index) in value">
+                            <a>{{item}}</a>
                         </li>
                     </ul>
                 </div>
                 <div class="fl ext"></div>
-            </div>
-            <div class="type-wrap">
-                <div class="fl key">显示屏尺寸</div>
-                <div class="fl value">
-                    <ul class="type-list">
-                        <li>
-                            <a>4.0-4.9英寸</a>
-                        </li>
-                        <li>
-                            <a>4.0-4.9英寸</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="fl ext"></div>
-            </div>
-            <div class="type-wrap">
-                <div class="fl key">摄像头像素</div>
-                <div class="fl value">
-                    <ul class="type-list">
-                        <li>
-                            <a>1200万以上</a>
-                        </li>
-                        <li>
-                            <a>800-1199万</a>
-                        </li>
-                        <li>
-                            <a>1200-1599万</a>
-                        </li>
-                        <li>
-                            <a>1600万以上</a>
-                        </li>
-                        <li>
-                            <a>无摄像头</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="fl ext"></div>
-            </div>
-            <div class="type-wrap">
-                <div class="fl key">价格</div>
-                <div class="fl value">
-                    <ul class="type-list">
-                        <li>
-                            <a>0-500元</a>
-                        </li>
-                        <li>
-                            <a>500-1000元</a>
-                        </li>
-                        <li>
-                            <a>1000-1500元</a>
-                        </li>
-                        <li>
-                            <a>1500-2000元</a>
-                        </li>
-                        <li>
-                            <a>2000-3000元 </a>
-                        </li>
-                        <li>
-                            <a>3000元以上</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="fl ext">
-                </div>
             </div>
             <div class="type-wrap" style="text-align: center">
-                <v-btn small flat>
+                <v-btn small flat @click="showMore =true" v-show="!showMore">
                     更多<v-icon>arrow_drop_down</v-icon>
                 </v-btn>
-                <v-btn small="" flat>
+                <v-btn small="" flat @click="showMore =false" v-show="showMore">
                     收起<v-icon>arrow_drop_up</v-icon>
                 </v-btn>
             </div>
@@ -289,8 +199,8 @@
                     <li class="yui3-u-1-5" v-for="(goods,index) in goodsList" :key="index">
                         <div class="list-wrap">
                             <div class="p-img">
-                                <a href="item.html" target="_blank">
-                                    <img :src="goods.selected.image" height="200"/></a>
+                                    <a :href="'/item/' +goods.id + '.html'" target="_blank">
+                                        <img :src="goods.selected.image" height="200" /></a>
                                 <ul class="skus">
                                     <li :class="{selected: sku.id == goods.selected.id}"
                                         v-for = "(sku,index) in goods.skus"
@@ -457,7 +367,11 @@
             total:0,
             totalPage:0,
             brandList:[],
-            categoryList:[]
+            categoryList:[],
+            specMap:{},
+            showMore:false,
+            filter:{},
+            filters:{}
         },
         watch: {
             page () {
@@ -465,13 +379,41 @@
             }
         },
         methods:{
+            removeFilterItem(key){
+                delete this.filter[key];
+                this.search();
+            },
+            getFilterValue(key,value){
+                if(key == 'cid3'){
+                    this.filters.categoryList.forEach(category => {
+                        if(category.id == value){
+                            value = category.name
+                        }
+                    });
+                    return value;
+                }else if(key == 'brandId'){
+                    this.filters.brandList.forEach(brand=>{
+                        if(brand.id == brandId){
+                            value = brand.name 
+                        }
+                    })
+                     return value;
+                }
+                return value;
+            },
+            addFilter(key,value){
+                this.filter[key] = value;
+                this.search();
+            },
+            
             defaultEvent(){},
             search(){
-                const search     = mrshop.parse(location.search.substring(1))
+                const search   = mrshop.parse(location.search.substring(1))
            mrshop.http.get('es/search',{
                params:{
                    search:search.key,
-                   page:this.page
+                   page:this.page,
+                   filter:JSON.stringify(this.filter)   
                }
            }).then(resp => {
                console.log(resp)
@@ -481,12 +423,14 @@
                 //   console.log(goods)
                   return goods;
                })
-               this.brandList = resp.data.brandList
-               this.categoryList = resp.data.categoryList   
-                this.goodsList = goodsList
                this.total = resp.data.total
                this.totalPage = resp.data.totalPage
-                // console.log(goodsList)
+               Object.assign(this.filters.specMap = resp.data.specMap)
+               this.filters.brandList = resp.data.brandList
+               this.filters.categoryList = resp.data.categoryList   
+                this.goodsList = goodsList
+                // console.log(resp.data.brandList);
+                //  console.log(this.filters.categoryList)
            }).catch(error => console.log(error))
             }
         }
